# os

./: Makefile
ex1/: README  osm.cpp
ex2/: Makefile  README  handle_jumps.c  main.c  ready_queue.c  sleeping_list.c  sleeping_list.h  uthreads.c  uthreads.h
ex2_junk/: CMakeLists.txt  main.c  ready_queue.cpp  ready_queue.h  uthreads.cpp  uthreads.h
